# Barings-Bank-collapse

./: .env.example  Dockerfile  README.md  data_card.md  docker-compose.yml  model_card.md  pyproject.toml  requirements.txt  sources.csv  start_platform.bat
app/api/: bootstrap.py  main.py  schemas.py  service.py
app/configs/: settings.py
app/dashboard/: app.py
app/data/clean/: feature_catalog.json  latest_features.csv  timeline.json
app/data/raw/public/: barings_public_extracts.json  market_nikkei_jgb_1995.csv
app/data/schemas/: position_record.schema.json  trade_record.schema.json
app/data/synthetic/collapse_42_120/: audit_logs.csv  cashflow_events.csv  market_data.csv  metadata.json  position_records.csv  reconciliation_logs.csv  trade_records.csv
app/data/synthetic/collapse_53_120/: audit_logs.csv  cashflow_events.csv  market_data.csv  metadata.json  position_records.csv  reconciliation_logs.csv  trade_records.csv
app/data/synthetic/collapse_64_120/: audit_logs.csv  cashflow_events.csv  market_data.csv  metadata.json  position_records.csv  reconciliation_logs.csv  trade_records.csv
app/data/synthetic/healthy_desk_42_120/: audit_logs.csv  cashflow_events.csv  market_data.csv  metadata.json  (+3 more)
app/features/: engine.py  engineer.py
app/ingestion/: public_sources.py
app/models/: explainer.py  sequence.py  trainer.py
app/schemas/: domain.py
app/security/: auth.py  crypto.py  rate_limit.py
app/simulation/: engine.py  market.py  trader.py
app/tests/: test_system.py
app/timeline/: builder.py
app/utils/: io.py  logging.py  paths.py
(+63 files in other folders)
